SET(LIBRARY_NAME ${PROJECT_NAME})

ADD_LIBRARY(${LIBRARY_NAME}
  SHARED
  joint.cc
  body.cc
  dynamic-robot.cc
  hand.cc
  foot.cc
  humanoid-dynamic-robot.cc
  robot-dynamics-object-factory.cc
  )

SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES SOVERSION ${PROJECT_VERSION})

PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} abstract-robot-dynamics)
ROSPACK_USE_DEPENDENCY(${LIBRARY_NAME} rbdl)
TARGET_LINK_LIBRARIES(${LIBRARY_NAME})

INSTALL(TARGETS ${LIBRARY_NAME} DESTINATION lib)
